dada_tests/validate/break_outside_loop/compiler-output.ref
Error: cannot `break` outside of a loop
   ╭─[dada_tests/validate/break_outside_loop.dada:2:5]
   │
 2 │     break
   ·     ──┬──  
   ·       ╰──── `break` outside of a loop here
───╯
